About Page Created

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -327,18 +327,37 @@ div.layoutSidebar {
         border-radius: 0.35em;
       }
     }
-    #content {
-      h1 {
-        font-weight: 500;
-      }
-      p {
-        font-size: 1.1em;
-        line-height: 1.75;
-      }
-      a {
-        color: #33acb7;
-        font-weight: 700;
-        text-decoration: none;
+    #offset {
+      width: 1px; /* Or zero, or something very small */
+      margin: auto;
+      overflow: visible;
+      #content {
+        margin-left: 20px;
+        
+        width:400px;
+
+        font-style: italic;
+        text-transform: lowercase;
+        color: #999;
+        border-top: #ddd 2px solid;
+        border-bottom: #ddd 2px solid;
+        font-size: 14px;
+        margin-top: 100px;
+        margin-bottom: 25px;
+        
+        padding-top: 20px;
+        padding-bottom: 20px;
+        
+        li {
+          margin: 5px 0;
+        }
+        span {
+          color: #333;
+          font-style: normal;
+          font-size: 12px;
+          text-transform: uppercase;
+          letter-spacing: 1px;
+        }
       }
     }
   }
