--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
 	<div class="sidebar">
 	  <div class="content">
 	    <div class="about">
-	      <a href="/"><%= image_tag "image.png" %></a>
-	      <h1><a href="/">Vaibhav Taneja</a></h1>
+	      <a href="/about"><%= image_tag "image.png" %></a>
+	      <h1><%= link_to "Vaibhav Taneja", root_path %></h1>
 	      <h2>About me</h2>
 	      <p>
 	        Ruby On Rails developer, Engineer by choice ^_^.<br>
@@ -39,8 +39,13 @@
 </div>
 <div id="main_content">
 	<div id="header">
-		<p>All Posts</p>
-		
+		<% if current_page?(root_path) %>
+			<p>All Posts</p>
+		<% elsif current_page?(about_path) %>
+			<p>About</p>
+		<% else  %>
+			<%= link_to "Back to All Posts",root_path %>
+		<% end  %>
 		<div class="buttons">
 			<button class="button"><%= link_to "New Post", new_post_path %></button>
 			<button class="button">Log Out</button>
