--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,9 @@
 	      <a href="http://github.com/vaibhavtaneja"><%= image_tag "github.png" %></a>
 	      <a href="mailto:vaibhavtaneja@live.com"><%= image_tag "mail.png" %></a>
 	    </div>
-	    <p class="sign_in">Admin Login</p>
+	    <% if !user_signed_in? %>
+			<p class="sign_in"><%= link_to "Admin Login", new_user_session_path %></p>
+		<% end %>
 	    <div class="projects">
 	      
 	    </div>
@@ -46,10 +48,12 @@
 		<% else  %>
 			<%= link_to "Back to All Posts",root_path %>
 		<% end  %>
-		<div class="buttons">
-			<button class="button"><%= link_to "New Post", new_post_path %></button>
-			<button class="button">Log Out</button>
-		</div>
+		<% if user_signed_in? %>
+			<div class="buttons">
+				<button class="button"><%= link_to "New Post", new_post_path %></button>
+				<button class="button"><%= link_to "Log Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %></button>
+			</div>
+		<% end %>
 	</div>
 
 	<% flash.each do |name, msg| %>
